// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AffixedProgressBar /> should render when [bsStyle='danger'] 1`] = `
<ProgressBar__StyledAffixedProgress
  bsStyle="danger"
  max="100"
  value={0}
/>
`;

exports[`<AffixedProgressBar /> should render when [bsStyle='success'] 1`] = `
<ProgressBar__StyledAffixedProgress
  bsStyle="success"
  max="100"
  value={0}
/>
`;

exports[`<AffixedProgressBar /> should render when [bsStyle='warning'] 1`] = `
<ProgressBar__StyledAffixedProgress
  bsStyle="warning"
  max="100"
  value={0}
/>
`;

exports[`<ProgressBar /> should render when [bsStyle='danger'] 1`] = `
<ProgressBar__StyledProgress
  bsStyle="danger"
  max="100"
  value={0}
/>
`;

exports[`<ProgressBar /> should render when [bsStyle='success'] 1`] = `
<ProgressBar__StyledProgress
  bsStyle="success"
  max="100"
  value={0}
/>
`;

exports[`<ProgressBar /> should render when [bsStyle='warning'] 1`] = `
<ProgressBar__StyledProgress
  bsStyle="warning"
  max="100"
  value={0}
/>
`;
